# turing

./: .clang-tidy  CMakeLists.txt  README.md  report.md
programs/: case1.tm  case2.tm
turing-project/: CMakeLists.txt  Errors.h  Logger.h  Machine.h  Parser.h  Simulator.h  StringUtils.h  Tape.h  main.cpp
